--- a/index.html
+++ b/index.html
@@ -64,26 +64,29 @@
                         {
                             id: 1,
                             name: 'Sample 1',
-                            values: [1, 2, 3],
+                            values: [10, 3, 7],
                             isDatetime: false,
                             extra: null
                         },
                         {
                             id: 2,
                             name: 'Sample 2',
-                            values: [3, 2, 1],
+                            values: [1, 6, 2],
                             isDatetime: false,
                             extra: null
                         }
                     ]
                 },
                 hooks: new ChartisanHooks()
-                    .colors(['#00ffff', 'green'])
+                    .colors()
                     .responsive()
+                    .beginAtZero()
                     .minimalist()
                     .title('Example chart using static data.')
-                    .datasets('line')
+                    .tooltip(true)
+                    .datasets('bar')
             })
+            console.log(chart2.legend())
             function update1() {
                 // chart1.update()
                 chart1.update({ background: true })
