--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
             const chart2 = new Chartisan({
                 el: '#chart2',
                 data: {
-                    chart: {
-                        labels: ['a', 'b', 'c']
-                    },
+                    chart: { labels: ['a', 'b', 'c'] },
                     datasets: [
                         { name: 'Sample 1', values: [10, 3, 7] },
                         { name: 'Sample 2', values: [1, 6, 2] }
